# nested_tree_menu

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.local.yml  docker-compose.release.yml  pyproject.toml
src/: .dockerignore  .env.example  Dockerfile  db.sqlite  dev-requirements.txt  pytest.ini
src/app/: settings.py  urls.py
src/app/conf/: auth.py  boilerplate.py  db.py  environ.py  http.py  installed_apps.py  middleware.py
src/scripts/: entrypoint.sh
src/tree_menu/: admin.py  models.py  querysets.py  urls.py  views.py
src/tree_menu/templates/: index.html
src/tree_menu/templatetags/: draw_menu.py
